<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linaColor1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <View
            android:id="@+id/add_creditCard_mStatusBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/linaColor1"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.shenjing.dengyuejinfu.widgte.TitleBar
            android:id="@+id/add_creditCard_titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/bgColor_overlay" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/card_3"
                android:textColor="@color/textColor"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/add_creditCard_userName"
                android:textCursorDrawable="@drawable/shape_text_cursor"
                android:inputType="textPersonName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/card_7"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/card_4"
                android:textColor="@color/textColor"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/add_creditCard_userIdCardNo"
                android:textCursorDrawable="@drawable/shape_text_cursor"
                android:inputType="number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/card_8"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/credit_card_4"
                android:textColor="@color/textColor"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/add_creditCard_bankNo"
                android:textCursorDrawable="@drawable/shape_text_cursor"
                android:inputType="number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/credit_card_5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/card_5"
                android:textColor="@color/textColor"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/add_creditCard_bankPhone"
                android:textCursorDrawable="@drawable/shape_text_cursor"
                android:inputType="phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/card_9"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/card_1"
                android:textColor="@color/textColor"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/add_creditCard_selectBank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/card_2"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/card_6"
                android:textColor="@color/textColor"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/add_creditCard_cvvn"
                android:textCursorDrawable="@drawable/shape_text_cursor"
                android:inputType="textVisiblePassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/credit_card_7"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/credit_card_6"
                android:textColor="@color/textColor"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/add_creditCard_bankValidity"
                android:textCursorDrawable="@drawable/shape_text_cursor"
                android:inputType="number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/credit_card_8"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/add_creditCard_submit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/submit_button_selector"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/submit_1"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </LinearLayout>
</LinearLayout>