<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linaColor1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <View
            android:id="@+id/card_evaluation_mStatusBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/linaColor1"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.shenjing.dengyuejinfu.widgte.TitleBar
            android:id="@+id/card_evaluation_titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/bgColor_overlay" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue4"
                android:padding="10dp"
                android:text="@string/card_24"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_view_circle1"
                android:hint="@string/card_7"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/textColor"
                android:textCursorDrawable="@drawable/shape_text_cursor"
                android:textSize="14dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_view_circle1"
                android:hint="@string/card_8"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/textColor"
                android:textCursorDrawable="@drawable/shape_text_cursor"
                android:textSize="14dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_view_circle1"
                android:hint="@string/bank_card_3"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/textColor"
                android:textCursorDrawable="@drawable/shape_text_cursor"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:theme="@style/My_CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/card_22"
                    android:textColor="@color/textColor"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/credit_inquiry_treaty"
                    android:textColor="@color/blue2"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_23"
                    android:textColor="@color/textColor"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9.9元"
                    android:textColor="@color/colorAccent"
                    android:textSize="14dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/submit_button_selector"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/submit_4"
                android:textColor="@color/white"
                android:textSize="16dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
               android:lineSpacingExtra="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_1"
                android:textColor="@color/textColor"
                android:textSize="16dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>